Bug 469263 - Wrong tooltip text for Refresh button
Summary: Wrong tooltip text for Refresh button
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2023-05-02 13:01 UTC by John Veness
Modified: 2023-06-26 19:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2023-05-02 13:01:23 UTC
SUMMARY

If you add a Refresh button to the toolbar and hover over it, the tooltip is "Refresh document" when it should be just "Refresh".

STEPS TO REPRODUCE
1. Run Dolphin
2. Menu, Settings, Configure Toolbars
3. Find action Refresh in Available column, move to Current column
4. OK
5. Hover over new Refresh toolbar button

OBSERVED RESULT
Tooltip text "Refresh document (F5)".

EXPECTED RESULT
Tooltip text "Refresh (F5)".

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230430
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Kernel Version: 6.2.12-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Manufacturer: HP
Product Name: HP ProBook 450 G4
Comment 1 Bug Janitor Service 2023-06-25 00:36:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/561
Comment 2 Felix Ernst 2023-06-26 19:37:15 UTC
Git commit b92bb43e9da038c68ff8cf3f95e043a2e42b6c75 by Felix Ernst, on behalf of Tem PQD.
Committed on 26/06/2023 at 19:32.
Pushed by felixernst into branch 'master'.

Fix Refresh tooltip text and add Refresh whatsThis text

M  +8    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/b92bb43e9da038c68ff8cf3f95e043a2e42b6c75