Fix Refresh tooltip text and add Refresh whatsThis text

BUG: 469263